--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
